# minimip

./: Makefile  README.md  pyproject.toml
src/minimip/: __init__.py  _constants.py  _typing.py
src/minimip/_typing/: __init__.py  protocols.py  types.py
src/minimip/problem/: _protocols.py  constraint.py  linker.py  problem.py  variable.py
src/minimip/readers/: rssl.py
